# BenchLib

./: .build.lua  .gitignore  .package.json  .travis.yml  CMakeLists.txt  README.md  generateCoverage.sh  generateProjectVS2015.bat  zpm.lua
benchmark/: benchmark.sln
benchmark/include/benchmark/: IBenchmarkCase.h  analysis.h  baselineAnalysis.h  benchLib.h  benchmark.h  benchmarkCase.h  benchmarkData.h  benchmarkGroup.h  benchmarkResult.h  benchmarkStat.h  config.h  console.h  definitions.h  group.h  histogram.h  memory.h  parser.h  regression.h  timer.h  util.h
benchmark/include/rapidjson/: document.h  rapidjson.h  reader.h
benchmark/src/: analysis.cpp  baselineAnalysis.cpp  benchmark.cpp  console.cpp  histogram.cpp  parser.cpp
script/: appveyor-build.bat  travis-build.sh
test/: .package.json  benchmark.licenseheader  main.cpp  premake5.lua  zpm.lua
viewer/: index.html
viewer/BenchViewer/: BenchViewer.csproj  BenchViewer.sln  WebEssentials-Settings.json  app.css  app.js.map  app.ts  data.js  index.html  packages.config
viewer/BenchViewer/Content/: benchViewer.css
viewer/BenchViewer/Scripts/: _references.js  benchViewer.js  benchViewer.js.map  collections.d.ts  collections.js  collections.js.map  collections.ts
viewer/BenchViewer/core/: IBenchmarkCase.ts  benchLib.ts  group.ts  (+10 more)
viewer/Package/: index.html  packages.config
viewer/css/: stylesheet.css
viewer/js/: benchviewer.js  fusioncharts.charts.js  fusioncharts.gantt.js  fusioncharts.js  fusioncharts.maps.js  fusioncharts.powercharts.js  fusioncharts.widgets.js  highcharts-histogram.js  schema.js
(+18 files in other folders)
